--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h2>Minha pagina inicial</h2>
+    <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, consectetur reprehenderit libero veritatis, quasi aperiam ratione quae magni reiciendis incidunt nobis alias nemo corrupti quos, cupiditate velit! Rem, amet fugit?</b>
 </body>
 </html>
